--- a/stili.css
+++ b/stili.css
@@ -1,8 +1,6 @@
 /* ---------STILI GENERALI--------- */
 
-*{
-  border: 1px solid green;
-}
+
 
 body {
   width: 100%;
@@ -58,6 +56,10 @@ h1 {
 
 .logo {
   height: 8vh;
+}
+
+.logo_link{
+  text-decoration: none;
 }
 
 .menu {
@@ -141,8 +143,7 @@ transform: scale(1.2);
 .overlay {
   position: absolute;
   top: 75%;
-  left: 30%;
-  transform: translate(50%, -50%);
+  left: 35%;
 }
 
 .image_container {
@@ -185,7 +186,7 @@ transform: scale(1.2);
     rgba(201, 0, 43, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#004b93",endColorstr="#c9002b",GradientType=1);
-  margin-bottom: ;
+
 }
 
 .trama_text {
@@ -195,7 +196,8 @@ transform: scale(1.2);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 250px;
+  margin-bottom: 350px;
+  margin-top: 300px;
 }
 
 .trama_text h1 {
@@ -232,6 +234,7 @@ transform: scale(1.2);
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 300px;
 }
 .cast_card_container {
   display: flex;
@@ -300,12 +303,12 @@ transform: scale(1.2);
 
 .button_cast {
   background-color: #004b93;
-  margin-bottom: 300px;
 }
 
 .button_cast:active{
   background-color: #013c74;
 }
+
 
 /*-------------------------GALLERY--------------------------*/
 
@@ -314,19 +317,26 @@ transform: scale(1.2);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 800px;
+  flex-direction: column;
 }
 
 .over_sfondo {
   max-width: 100%;
   max-height: 100%;
-  height: 80%;
   width: 80%;
+  margin-bottom: 70px;
+  margin-top: 150px;
 }
 
 .button_gallery{
   align-items: center;
 }
+
+
+.section_home_gallery div{
+  margin-bottom: 150px;
+}
+
 
 /* --------------------------FOOTER-------------------------------- */
 
@@ -421,3 +431,4 @@ footer {
 .footer_articoli div{
   margin-bottom: 10px;
 }
+
